--- a/formulario.html
+++ b/formulario.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>formulario</title>
 </head>
 <body>
         <header>
@@ -13,13 +13,127 @@
     <main>                
     <form action="" method="post"> 
         <div>
-            <h2>FAÇA LOGIN</h2>
+            <h2>Crie sua pesquisa</h2>
         </div>
-        <label for="nome">NOME</label>
-        <input id="nome" type="text" name="nome"></input>
-        <label for="senha">SENHA</label>
-        <input id="senha" type="text" name="senha"></input>
-        <button name="button">ENTRAR</button>
+
+    <div>
+        <h2>Questão 1</h2>
+    </div>
+
+    <div>
+        <p>Digite a primeira pergunta</p>
+    </div>
+  
+    <label for="respostas">Respostas</label>
+
+<select name="respostas" id="respostas">
+  <option value="resposta">Resposta A</option>
+  <option value="resposta">Resposta B</option>
+  <option value="resposta">Resposta C</option>
+  <option value="resposta">Resposta E</option>
+</select>
+
+<div>
+    <h2>Questão 2</h2>
+</div>
+
+<div>
+    <p>Digite a primeira pergunta</p>
+</div>
+
+<label for="respostas">Respostas</label>
+
+<select name="respostas" id="respostas">
+<option value="resposta">Resposta A</option>
+<option value="resposta">Resposta B</option>
+<option value="resposta">Resposta C</option>
+<option value="resposta">Resposta E</option>
+</select>
+
+<div>
+    <h2>Questão 3</h2>
+</div>
+
+<div>
+    <p>Digite a primeira pergunta</p>
+</div>
+
+<label for="respostas">Respostas</label>
+
+<select name="respostas" id="respostas">
+<option value="resposta">Resposta A</option>
+<option value="resposta">Resposta B</option>
+<option value="resposta">Resposta C</option>
+<option value="resposta">Resposta E</option>
+</select>
+
+<div>
+    <h2>Questão 4</h2>
+</div>
+
+<div>
+    <p>Digite a primeira pergunta</p>
+</div>
+
+<label for="respostas">Respostas</label>
+
+<select name="respostas" id="respostas">
+<option value="resposta">Resposta A</option>
+<option value="resposta">Resposta B</option>
+<option value="resposta">Resposta C</option>
+<option value="resposta">Resposta E</option>
+</select>
+
+<div>
+    <h2>Questão 5</h2>
+</div>
+
+<div>
+    <p>Digite a primeira pergunta</p>
+</div>
+
+<label for="respostas">Respostas</label>
+
+<select name="respostas" id="respostas">
+<option value="resposta">Resposta A</option>
+<option value="resposta">Resposta B</option>
+<option value="resposta">Resposta C</option>
+<option value="resposta">Resposta E</option>
+</select>
+
+<div>
+    <h2>Questão 6</h2>
+</div>
+
+<div>
+    <p>Digite a primeira pergunta</p>
+</div>
+
+<label for="respostas">Respostas</label>
+
+<select name="respostas" id="respostas">
+<option value="resposta">Resposta A</option>
+<option value="resposta">Resposta B</option>
+<option value="resposta">Resposta C</option>
+<option value="resposta">Resposta E</option>
+</select>
+
+<div>
+    <h2>Questão 7</h2>
+</div>
+
+<div>
+    <p>Digite a primeira pergunta</p>
+</div>
+
+<label for="respostas">Respostas</label>
+
+<select name="respostas" id="respostas">
+<option value="resposta">Resposta A</option>
+<option value="resposta">Resposta B</option>
+<option value="resposta">Resposta C</option>
+<option value="resposta">Resposta E</option>
+</select>
      </form>
     
     </main>
