--- a/formulario.html
+++ b/formulario.html
@@ -11,7 +11,7 @@
         <a href="pesquisas.html">Pesquisas</a>
         </header>
     <main>                
-    <form action="" method="post"> 
+    <form action="" method="get"> 
         <div>
             <h2>Crie sua pesquisa</h2>
         </div>
