--- a/formulario.html
+++ b/formulario.html
@@ -13,27 +13,40 @@
     <main>                
     <form action="" method="get"> 
         <div>
-            <h2>Crie sua pesquisa</h2>
+            <label for="nome-pesquisa">Crie sua Pesquisa</label>
+            <input type="text" id="nome-pesquisa" name="nome-pesquisa" placeholder="Digite o nome da Pesquisa"></input>
         </div>
-
     <div>
-        <h2>Questão 1</h2>
+        <h3>Questão 1</h3>
     </div>
-
+    <input type="text" id="pergunta1" name="pergunta1" placeholder="Digite a primeira pergunta"></input>
     <div>
-        <p>Digite a primeira pergunta</p>
+        <h3>Respostas</h3>
     </div>
-  
-    <label for="respostas">Respostas</label>
-
-<select name="respostas" id="respostas">
-  <option value="resposta">Resposta A</option>
-  <option value="resposta">Resposta B</option>
-  <option value="resposta">Resposta C</option>
-  <option value="resposta">Resposta E</option>
-</select>
-
 <div>
+    <input type="text" for="respostaA" placeholder="Resposta A"></input>
+    <label for="respostaA">
+    <input type="checkbox" id="respostaA" name="respostaA" checked>
+        </label> 
+  </div>
+  <div>
+    <input type="text" for="respostaB" placeholder="Resposta B"></input>
+    <label for="respostaB">
+    <input type="checkbox" id="respostaB" name="respostaB" checked>
+        </label> 
+  </div>
+  <div>
+    <input type="text" for="respostaC" placeholder="Resposta C"></input>
+    <label for="respostaC">
+    <input type="checkbox" id="respostaC" name="respostaC" checked>
+        </label> 
+  </div>
+  <div>
+    <input type="text" for="respostaD" placeholder="Resposta D"></input>
+    <label for="respostaD">
+    <input type="checkbox" id="respostaD" name="respostaD" checked>
+        </label> 
+  </div>
     <h2>Questão 2</h2>
 </div>
 
