--- a/formulario.html
+++ b/formulario.html
@@ -47,109 +47,205 @@
     <input type="checkbox" id="respostaD" name="respostaD" checked>
         </label> 
   </div>
-    <h2>Questão 2</h2>
+
+  <div>
+    <h3>Questão 2</h3>
+</div>
+<input type="text" id="pergunta1" name="pergunta1" placeholder="Digite a primeira pergunta"></input>
+<div>
+    <h3>Respostas</h3>
+</div>
+<div>
+<input type="text" for="respostaA" placeholder="Resposta A"></input>
+<label for="respostaA">
+<input type="checkbox" id="respostaA" name="respostaA" checked>
+    </label> 
+</div>
+<div>
+<input type="text" for="respostaB" placeholder="Resposta B"></input>
+<label for="respostaB">
+<input type="checkbox" id="respostaB" name="respostaB" checked>
+    </label> 
+</div>
+<div>
+<input type="text" for="respostaC" placeholder="Resposta C"></input>
+<label for="respostaC">
+<input type="checkbox" id="respostaC" name="respostaC" checked>
+    </label> 
+</div>
+<div>
+<input type="text" for="respostaD" placeholder="Resposta D"></input>
+<label for="respostaD">
+<input type="checkbox" id="respostaD" name="respostaD" checked>
+    </label> 
 </div>
 
 <div>
-    <p>Digite a primeira pergunta</p>
+    <h3>Questão 3</h3>
 </div>
-
-<label for="respostas">Respostas</label>
-
-<select name="respostas" id="respostas">
-<option value="resposta">Resposta A</option>
-<option value="resposta">Resposta B</option>
-<option value="resposta">Resposta C</option>
-<option value="resposta">Resposta E</option>
-</select>
-
+<input type="text" id="pergunta1" name="pergunta1" placeholder="Digite a primeira pergunta"></input>
 <div>
-    <h2>Questão 3</h2>
+    <h3>Respostas</h3>
 </div>
-
 <div>
-    <p>Digite a primeira pergunta</p>
+<input type="text" for="respostaA" placeholder="Resposta A"></input>
+<label for="respostaA">
+<input type="checkbox" id="respostaA" name="respostaA" checked>
+    </label> 
 </div>
-
-<label for="respostas">Respostas</label>
-
-<select name="respostas" id="respostas">
-<option value="resposta">Resposta A</option>
-<option value="resposta">Resposta B</option>
-<option value="resposta">Resposta C</option>
-<option value="resposta">Resposta E</option>
-</select>
-
 <div>
-    <h2>Questão 4</h2>
+<input type="text" for="respostaB" placeholder="Resposta B"></input>
+<label for="respostaB">
+<input type="checkbox" id="respostaB" name="respostaB" checked>
+    </label> 
+</div>
+<div>
+<input type="text" for="respostaC" placeholder="Resposta C"></input>
+<label for="respostaC">
+<input type="checkbox" id="respostaC" name="respostaC" checked>
+    </label> 
+</div>
+<div>
+<input type="text" for="respostaD" placeholder="Resposta D"></input>
+<label for="respostaD">
+<input type="checkbox" id="respostaD" name="respostaD" checked>
+    </label> 
 </div>
 
 <div>
-    <p>Digite a primeira pergunta</p>
+    <h3>Questão 4</h3>
 </div>
-
-<label for="respostas">Respostas</label>
-
-<select name="respostas" id="respostas">
-<option value="resposta">Resposta A</option>
-<option value="resposta">Resposta B</option>
-<option value="resposta">Resposta C</option>
-<option value="resposta">Resposta E</option>
-</select>
-
+<input type="text" id="pergunta1" name="pergunta1" placeholder="Digite a primeira pergunta"></input>
 <div>
-    <h2>Questão 5</h2>
+    <h3>Respostas</h3>
 </div>
-
 <div>
-    <p>Digite a primeira pergunta</p>
+<input type="text" for="respostaA" placeholder="Resposta A"></input>
+<label for="respostaA">
+<input type="checkbox" id="respostaA" name="respostaA" checked>
+    </label> 
 </div>
-
-<label for="respostas">Respostas</label>
-
-<select name="respostas" id="respostas">
-<option value="resposta">Resposta A</option>
-<option value="resposta">Resposta B</option>
-<option value="resposta">Resposta C</option>
-<option value="resposta">Resposta E</option>
-</select>
-
 <div>
-    <h2>Questão 6</h2>
+<input type="text" for="respostaB" placeholder="Resposta B"></input>
+<label for="respostaB">
+<input type="checkbox" id="respostaB" name="respostaB" checked>
+    </label> 
+</div>
+<div>
+<input type="text" for="respostaC" placeholder="Resposta C"></input>
+<label for="respostaC">
+<input type="checkbox" id="respostaC" name="respostaC" checked>
+    </label> 
+</div>
+<div>
+<input type="text" for="respostaD" placeholder="Resposta D"></input>
+<label for="respostaD">
+<input type="checkbox" id="respostaD" name="respostaD" checked>
+    </label> 
 </div>
 
 <div>
-    <p>Digite a primeira pergunta</p>
+    <h3>Questão 5</h3>
 </div>
-
-<label for="respostas">Respostas</label>
-
-<select name="respostas" id="respostas">
-<option value="resposta">Resposta A</option>
-<option value="resposta">Resposta B</option>
-<option value="resposta">Resposta C</option>
-<option value="resposta">Resposta E</option>
-</select>
+<input type="text" id="pergunta1" name="pergunta1" placeholder="Digite a primeira pergunta"></input>
+<div>
+    <h3>Respostas</h3>
+</div>
+<div>
+<input type="text" for="respostaA" placeholder="Resposta A"></input>
+<label for="respostaA">
+<input type="checkbox" id="respostaA" name="respostaA" checked>
+    </label> 
+</div>
+<div>
+<input type="text" for="respostaB" placeholder="Resposta B"></input>
+<label for="respostaB">
+<input type="checkbox" id="respostaB" name="respostaB" checked>
+    </label> 
+</div>
+<div>
+<input type="text" for="respostaC" placeholder="Resposta C"></input>
+<label for="respostaC">
+<input type="checkbox" id="respostaC" name="respostaC" checked>
+    </label> 
+</div>
+<div>
+<input type="text" for="respostaD" placeholder="Resposta D"></input>
+<label for="respostaD">
+<input type="checkbox" id="respostaD" name="respostaD" checked>
+    </label> 
+</div>
 
 <div>
-    <h2>Questão 7</h2>
+    <h3>Questão 6</h3>
+</div>
+<input type="text" id="pergunta1" name="pergunta1" placeholder="Digite a primeira pergunta"></input>
+<div>
+    <h3>Respostas</h3>
+</div>
+<div>
+<input type="text" for="respostaA" placeholder="Resposta A"></input>
+<label for="respostaA">
+<input type="checkbox" id="respostaA" name="respostaA" checked>
+    </label> 
+</div>
+<div>
+<input type="text" for="respostaB" placeholder="Resposta B"></input>
+<label for="respostaB">
+<input type="checkbox" id="respostaB" name="respostaB" checked>
+    </label> 
+</div>
+<div>
+<input type="text" for="respostaC" placeholder="Resposta C"></input>
+<label for="respostaC">
+<input type="checkbox" id="respostaC" name="respostaC" checked>
+    </label> 
+</div>
+<div>
+<input type="text" for="respostaD" placeholder="Resposta D"></input>
+<label for="respostaD">
+<input type="checkbox" id="respostaD" name="respostaD" checked>
+    </label> 
 </div>
 
 <div>
-    <p>Digite a primeira pergunta</p>
+    <h3>Questão 7</h3>
 </div>
-
-<label for="respostas">Respostas</label>
-
-<select name="respostas" id="respostas">
-<option value="resposta">Resposta A</option>
-<option value="resposta">Resposta B</option>
-<option value="resposta">Resposta C</option>
-<option value="resposta">Resposta E</option>
-</select>
+<input type="text" id="pergunta1" name="pergunta1" placeholder="Digite a primeira pergunta"></input>
+<div>
+    <h3>Respostas</h3>
+</div>
+<div>
+<input type="text" for="respostaA" placeholder="Resposta A"></input>
+<label for="respostaA">
+<input type="checkbox" id="respostaA" name="respostaA" checked>
+    </label> 
+</div>
+<div>
+<input type="text" for="respostaB" placeholder="Resposta B"></input>
+<label for="respostaB">
+<input type="checkbox" id="respostaB" name="respostaB" checked>
+    </label> 
+</div>
+<div>
+<input type="text" for="respostaC" placeholder="Resposta C"></input>
+<label for="respostaC">
+<input type="checkbox" id="respostaC" name="respostaC" checked>
+    </label> 
+</div>
+<div>
+<input type="text" for="respostaD" placeholder="Resposta D"></input>
+<label for="respostaD">
+<input type="checkbox" id="respostaD" name="respostaD" checked>
+    </label> 
+</div>
      </form>
+
+     <div>
      <button name="button">SALVAR</button>
      <p>*Marque as questões corretas</p>
+     </div>
+    
     </main>
     <footer>
         <div>
