--- a/formulario.html
+++ b/formulario.html
@@ -16,234 +16,47 @@
             <label for="nome-pesquisa">Crie sua Pesquisa</label>
             <input type="text" id="nome-pesquisa" name="nome-pesquisa" placeholder="Digite o nome da Pesquisa"></input>
         </div>
-    <div>
-        <h3>Questão 1</h3>
-    </div>
-    <input type="text" id="pergunta1" name="pergunta1" placeholder="Digite a primeira pergunta"></input>
-    <div>
-        <h3>Respostas</h3>
-    </div>
-<div>
-    <input type="text" for="respostaA" placeholder="Resposta A"></input>
-    <label for="respostaA">
-    <input type="checkbox" id="respostaA" name="respostaA" checked>
-        </label> 
-  </div>
-  <div>
-    <input type="text" for="respostaB" placeholder="Resposta B"></input>
-    <label for="respostaB">
-    <input type="checkbox" id="respostaB" name="respostaB" checked>
-        </label> 
-  </div>
-  <div>
-    <input type="text" for="respostaC" placeholder="Resposta C"></input>
-    <label for="respostaC">
-    <input type="checkbox" id="respostaC" name="respostaC" checked>
-        </label> 
-  </div>
-  <div>
-    <input type="text" for="respostaD" placeholder="Resposta D"></input>
-    <label for="respostaD">
-    <input type="checkbox" id="respostaD" name="respostaD" checked>
-        </label> 
-  </div>
+        <div>
+            <h3>Questão</h3>
+            <div>
+                <input type="text" id="pergunta1" name="pergunta1" placeholder="Digite a pergunta"></input>
+            </div>
 
-  <div>
-    <h3>Questão 2</h3>
-</div>
-<input type="text" id="pergunta1" name="pergunta1" placeholder="Digite a primeira pergunta"></input>
-<div>
-    <h3>Respostas</h3>
-</div>
-<div>
-<input type="text" for="respostaA" placeholder="Resposta A"></input>
-<label for="respostaA">
-<input type="checkbox" id="respostaA" name="respostaA" checked>
-    </label> 
-</div>
-<div>
-<input type="text" for="respostaB" placeholder="Resposta B"></input>
-<label for="respostaB">
-<input type="checkbox" id="respostaB" name="respostaB" checked>
-    </label> 
-</div>
-<div>
-<input type="text" for="respostaC" placeholder="Resposta C"></input>
-<label for="respostaC">
-<input type="checkbox" id="respostaC" name="respostaC" checked>
-    </label> 
-</div>
-<div>
-<input type="text" for="respostaD" placeholder="Resposta D"></input>
-<label for="respostaD">
-<input type="checkbox" id="respostaD" name="respostaD" checked>
-    </label> 
-</div>
+            <h3>Resposta</h3>
 
-<div>
-    <h3>Questão 3</h3>
-</div>
-<input type="text" id="pergunta1" name="pergunta1" placeholder="Digite a primeira pergunta"></input>
-<div>
-    <h3>Respostas</h3>
-</div>
-<div>
-<input type="text" for="respostaA" placeholder="Resposta A"></input>
-<label for="respostaA">
-<input type="checkbox" id="respostaA" name="respostaA" checked>
-    </label> 
-</div>
-<div>
-<input type="text" for="respostaB" placeholder="Resposta B"></input>
-<label for="respostaB">
-<input type="checkbox" id="respostaB" name="respostaB" checked>
-    </label> 
-</div>
-<div>
-<input type="text" for="respostaC" placeholder="Resposta C"></input>
-<label for="respostaC">
-<input type="checkbox" id="respostaC" name="respostaC" checked>
-    </label> 
-</div>
-<div>
-<input type="text" for="respostaD" placeholder="Resposta D"></input>
-<label for="respostaD">
-<input type="checkbox" id="respostaD" name="respostaD" checked>
-    </label> 
-</div>
+            
+            <div>
+                <input type="text" for="respostaA" placeholder="Resposta A"></input>
+                <label for="respostaA">
+                    <input type="checkbox" id="respostaA" name="respostaA" checked>
+                </label>
+            </div>     
+        </div>
+        <div>
+            <input type="text" for="respostaB" placeholder="Resposta B"></input>
+            <label for="respostaB">
+                <input type="checkbox" id="respostaB" name="respostaB" checked>
+            </label> 
+        </div>
 
-<div>
-    <h3>Questão 4</h3>
-</div>
-<input type="text" id="pergunta1" name="pergunta1" placeholder="Digite a primeira pergunta"></input>
-<div>
-    <h3>Respostas</h3>
-</div>
-<div>
-<input type="text" for="respostaA" placeholder="Resposta A"></input>
-<label for="respostaA">
-<input type="checkbox" id="respostaA" name="respostaA" checked>
-    </label> 
-</div>
-<div>
-<input type="text" for="respostaB" placeholder="Resposta B"></input>
-<label for="respostaB">
-<input type="checkbox" id="respostaB" name="respostaB" checked>
-    </label> 
-</div>
-<div>
-<input type="text" for="respostaC" placeholder="Resposta C"></input>
-<label for="respostaC">
-<input type="checkbox" id="respostaC" name="respostaC" checked>
-    </label> 
-</div>
-<div>
-<input type="text" for="respostaD" placeholder="Resposta D"></input>
-<label for="respostaD">
-<input type="checkbox" id="respostaD" name="respostaD" checked>
-    </label> 
-</div>
+        <div>
+            <input type="text" for="respostaC" placeholder="Resposta C"></input>
+            <label for="respostaC">
+                <input type="checkbox" id="respostaC" name="respostaC" checked>
+            </label> 
+        </div>
 
-<div>
-    <h3>Questão 5</h3>
-</div>
-<input type="text" id="pergunta1" name="pergunta1" placeholder="Digite a primeira pergunta"></input>
-<div>
-    <h3>Respostas</h3>
-</div>
-<div>
-<input type="text" for="respostaA" placeholder="Resposta A"></input>
-<label for="respostaA">
-<input type="checkbox" id="respostaA" name="respostaA" checked>
-    </label> 
-</div>
-<div>
-<input type="text" for="respostaB" placeholder="Resposta B"></input>
-<label for="respostaB">
-<input type="checkbox" id="respostaB" name="respostaB" checked>
-    </label> 
-</div>
-<div>
-<input type="text" for="respostaC" placeholder="Resposta C"></input>
-<label for="respostaC">
-<input type="checkbox" id="respostaC" name="respostaC" checked>
-    </label> 
-</div>
-<div>
-<input type="text" for="respostaD" placeholder="Resposta D"></input>
-<label for="respostaD">
-<input type="checkbox" id="respostaD" name="respostaD" checked>
-    </label> 
-</div>
-
-<div>
-    <h3>Questão 6</h3>
-</div>
-<input type="text" id="pergunta1" name="pergunta1" placeholder="Digite a primeira pergunta"></input>
-<div>
-    <h3>Respostas</h3>
-</div>
-<div>
-<input type="text" for="respostaA" placeholder="Resposta A"></input>
-<label for="respostaA">
-<input type="checkbox" id="respostaA" name="respostaA" checked>
-    </label> 
-</div>
-<div>
-<input type="text" for="respostaB" placeholder="Resposta B"></input>
-<label for="respostaB">
-<input type="checkbox" id="respostaB" name="respostaB" checked>
-    </label> 
-</div>
-<div>
-<input type="text" for="respostaC" placeholder="Resposta C"></input>
-<label for="respostaC">
-<input type="checkbox" id="respostaC" name="respostaC" checked>
-    </label> 
-</div>
-<div>
-<input type="text" for="respostaD" placeholder="Resposta D"></input>
-<label for="respostaD">
-<input type="checkbox" id="respostaD" name="respostaD" checked>
-    </label> 
-</div>
-
-<div>
-    <h3>Questão 7</h3>
-</div>
-<input type="text" id="pergunta1" name="pergunta1" placeholder="Digite a primeira pergunta"></input>
-<div>
-    <h3>Respostas</h3>
-</div>
-<div>
-<input type="text" for="respostaA" placeholder="Resposta A"></input>
-<label for="respostaA">
-<input type="checkbox" id="respostaA" name="respostaA" checked>
-    </label> 
-</div>
-<div>
-<input type="text" for="respostaB" placeholder="Resposta B"></input>
-<label for="respostaB">
-<input type="checkbox" id="respostaB" name="respostaB" checked>
-    </label> 
-</div>
-<div>
-<input type="text" for="respostaC" placeholder="Resposta C"></input>
-<label for="respostaC">
-<input type="checkbox" id="respostaC" name="respostaC" checked>
-    </label> 
-</div>
-<div>
-<input type="text" for="respostaD" placeholder="Resposta D"></input>
-<label for="respostaD">
-<input type="checkbox" id="respostaD" name="respostaD" checked>
-    </label> 
-</div>
+        <div>
+            <input type="text" for="respostaD" placeholder="Resposta D"></input>
+            <label for="respostaD">
+                <input type="checkbox" id="respostaD" name="respostaD" checked>
+            </label> 
+        </div>
      </form>
 
      <div>
      <button name="button">SALVAR</button>
-     <p>*Marque as questões corretas</p>
+     <p>*Marque a questão que você deseja que seja a correta</p>
      </div>
     
     </main>
