Estiliz. página de login

--- a/formulario.html
+++ b/formulario.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>formulario</title>
+    <title>Página de Cadastro</title>
 </head>
 <body>
     <header>
@@ -21,10 +21,8 @@
                 <div>
                     <input type="text" id="pergunta1" name="pergunta1" placeholder="Digite a pergunta"></input>
                 </div>
-
-                <h3>Resposta</h3>
-
-                
+                <div>
+                <h3>Respostas</h3>
                 <div>
                     <input type="text" for="respostaA" placeholder="Resposta A"></input>
                     <label for="respostaA">
@@ -52,12 +50,15 @@
                     <input type="checkbox" id="respostaD" name="respostaD" checked>
                 </label> 
             </div>
+            <div>
+                <button type="submit" name="button">CRIAR</button>
+                <p>*Marque a questão que você deseja que seja a correta</p>
+                <button type="reset" name="button">ADICIONAR</button>
+                </div>
+        </div>
         </form>
 
-        <div>
-        <button name="button">SALVAR</button>
-        <p>*Marque a questão que você deseja que seja a correta</p>
-        </div>
+
     
     </main>
     <footer>
