--- a/index.html
+++ b/index.html
@@ -3,24 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulário</title>
+    <link rel="stylesheet" href="./css/index.css">
+    <title>Sistema de Pesquisas</title>
 </head>
 <body>
     <header>
-        <h1>SISTEMAS DE PESQUISA</h1> 
+        <h1>SISTEMAS DE PESQUISAS</h1> 
     <a href="pesquisas.html">Pesquisas</a>
     </header>
 <main>
     <h2>Acesse e cadastre sua pesquisa no nosso sistema!</h2>
-    
+
 <form action="" method="post"> 
-    <div>
+    <div class="f-login">
         <h2>FAÇA LOGIN</h2>
     </div>
+    <div class="l-nome">
     <label for="nome">NOME</label>
     <input id="nome" type="text" name="nome"></input>
+    </div>
+    <div class="l-senha"> 
     <label for="senha">SENHA</label>
     <input id="senha" type="text" name="senha"></input>
+     </div>
     <button name="button">ENTRAR</button>
  </form>
 
@@ -33,13 +38,13 @@
     </div>
     <div>
         <ul>
-            <li>JUAN VICTOR</li>
-            <li>LEONARDO RODRIGUES</li>
-            <li>FELIPE BRAGA</li>
-            <li>JULIA AGATHA</li>
-            <li>CAIO DANIEL</li>
-            <li>VICTOR VICENTE</li>
-            <li>RAQUEL MOREIRA</li>
+            <li><a href="">JUAN VICTOR</a></li>
+            <li><a href="">LEONARDO RODRIGUES</a></li>
+            <li><a href="">FELIPE BRAGA</a></li>
+            <li><a href="">JULIA AGATHA</a></li>
+            <li><a href="">CAIO DANIEL</a></li>
+            <li><a href="">VICTOR VICENTE</a></li>
+            <li><a href="">RAQUEL MOREIRA</a></li>
         </ul>
     </div>
 </footer>
