--- a/pesquisas.html
+++ b/pesquisas.html
@@ -3,34 +3,101 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema de Pesquisas</title>
+    <title>formulario</title>
 </head>
 <body>
-    <header>
-        <h1>SISTEMAS DE PESQUISA</h1> 
-    <a href="pesquisas.html">Pesquisas</a>
-    </header>
-<main>
+        <header>
+            <h1>SISTEMAS DE PESQUISA</h1> 
+        <a href="pesquisas.html">Pesquisas</a>
+        </header>
+    <main>                
+    <form action="" method="get"> 
+    <h2>Pesquisa</h2>
 
-</main>
-<footer>
     <div>
-        <h1>
-            INTEGRANTES
-        </h1>
+        <p>Essa é a questão 1, temos que selecionar a alternativa correta da questão.</p>
+        <label for="respostaA">RESPOSTA A</label>
+        <input type="checkbox" id="respostaA" name="respostaA">
+    </div>
+        <label for="respostaB">RESPOSTA B</label>
+        <input type="checkbox" id="respostaB" name="respostaB">
+    <div>
+        <label for="respostaC">RESPOSTA C</label>
+        <input type="checkbox" id="respostaC" name="respostaC">
     </div>
     <div>
-        <ul>
-            <li>JUAN VICTOR</li>
-            <li>LEONARDO RODRIGUES</li>
-            <li>FELIPE BRAGA</li>
-            <li>JULIA AGATHA</li>
-            <li>CAIO DANIEL</li>
-            <li>VICTOR VICENTE</li>
-            <li>RAQUEL MOREIRA</li>
-        </ul>
+        <label for="respostaD">RESPOSTA D</label>
+        <input type="checkbox" id="respostaD" name="respostaD">
     </div>
-</footer>
 
+    <div>
+        <p>Essa é a questão 1, temos que selecionar a alternativa correta da questão.</p>
+        <label for="respostaA">RESPOSTA A</label>
+        <input type="checkbox" id="respostaA" name="respostaA">
+    </div>
+        <label for="respostaB">RESPOSTA B</label>
+        <input type="checkbox" id="respostaB" name="respostaB">
+    <div>
+        <label for="respostaC">RESPOSTA C</label>
+        <input type="checkbox" id="respostaC" name="respostaC">
+    </div>
+    <div>
+        <label for="respostaD">RESPOSTA D</label>
+        <input type="checkbox" id="respostaD" name="respostaD">
+    </div>
+
+    <div>
+        <p>Essa é a questão 1, temos que selecionar a alternativa correta da questão.</p>
+        <label for="respostaA">RESPOSTA A</label>
+        <input type="checkbox" id="respostaA" name="respostaA">
+    </div>
+        <label for="respostaB">RESPOSTA B</label>
+        <input type="checkbox" id="respostaB" name="respostaB">
+    <div>
+        <label for="respostaC">RESPOSTA C</label>
+        <input type="checkbox" id="respostaC" name="respostaC">
+    </div>
+    <div>
+        <label for="respostaD">RESPOSTA D</label>
+        <input type="checkbox" id="respostaD" name="respostaD">
+    </div>
+
+    <div>
+        <p>Essa é a questão 1, temos que selecionar a alternativa correta da questão.</p>
+        <label for="respostaA">RESPOSTA A</label>
+        <input type="checkbox" id="respostaA" name="respostaA">
+    </div>
+        <label for="respostaB">RESPOSTA B</label>
+        <input type="checkbox" id="respostaB" name="respostaB">
+    <div>
+        <label for="respostaC">RESPOSTA C</label>
+        <input type="checkbox" id="respostaC" name="respostaC">
+    </div>
+    <div>
+        <label for="respostaD">RESPOSTA D</label>
+        <input type="checkbox" id="respostaD" name="respostaD">
+    </div>
+
+    </form>
+    </main>
+
+    <footer>
+        <div>
+            <h1>
+                INTEGRANTES
+            </h1>
+        </div>
+        <div>
+            <ul>
+                <li>JUAN VICTOR</li>
+                <li>LEONARDO RODRIGUES</li>
+                <li>FELIPE BRAGA</li>
+                <li>JULIA AGATHA</li>
+                <li>CAIO DANIEL</li>
+                <li>VICTOR VICENTE</li>
+                <li>RAQUEL MOREIRA</li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
