--- a/formulario.html
+++ b/formulario.html
@@ -13,24 +13,26 @@
     </header>
     <main>                
         <form action="" method="get"> 
-            <div>
+            <div class="pesq">
                 <label for="nome-pesquisa">Crie sua Pesquisa</label>
-                <input type="text" id="nome-pesquisa" name="nome-pesquisa" placeholder="Digite o nome da Pesquisa"></input>
+                <input type="text" id="nome-pesquisa" name="nome-pesquisa" placeholder="Digite o nome da pesquisa"></input>
             </div>
             <div>
                 <h3>Questão</h3>
+            </div>
                 <div>
-                    <input type="text" id="pergunta1" name="pergunta1" placeholder="Digite a pergunta"></input>
+                    <input type="text" id="pergunta" name="pergunta" placeholder="Digite a pergunta"></input>
                 </div>
                 <div>
                 <h3>Respostas</h3>
+                </div>
                 <div>
                     <input type="text" for="respostaA" placeholder="Resposta A"></input>
                     <label for="respostaA">
                         <input type="checkbox" id="respostaA" name="respostaA" checked>
                     </label>
                 </div>     
-            </div>
+
             <div>
                 <input type="text" for="respostaB" placeholder="Resposta B"></input>
                 <label for="respostaB">
@@ -59,13 +61,12 @@
         </div>
         </form>
 
-
     
     </main>
     <footer>
         <div>
             <h1>
-                INTEGRANTES
+                INTEGRANTES:
             </h1>
         </div>
         <div>
