--- a/pesquisas.html
+++ b/pesquisas.html
@@ -84,7 +84,7 @@
     <footer>
         <div>
             <h1>
-                INTEGRANTES
+                INTEGRANTES:
             </h1>
         </div>
         <div>
