--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
     </div>
     <div>
         <ul>
-            <li><a href="">JUAN VICTOR</a></li>
-            <li><a href="">LEONARDO RODRIGUES</a></li>
-            <li><a href="">FELIPE BRAGA</a></li>
-            <li><a href="">JULIA AGATHA</a></li>
-            <li><a href="">CAIO DANIEL</a></li>
-            <li><a href="">VICTOR VICENTE</a></li>
-            <li><a href="">RAQUEL MOREIRA</a></li>
+            <li><a href="https://github.com/JuanVAF">JUAN VICTOR</a></li>
+            <li><a href="https://github.com/leoorodr">LEONARDO RODRIGUES</a></li>
+            <li><a href="https://github.com/obragaa">FELIPE BRAGA</a></li>
+            <li><a href="https://github.com/agatha-juh">JULIA AGATHA</a></li>
+            <li><a href="https://github.com/caiodanielp">CAIO DANIEL</a></li>
+            <li><a href="https://github.com/Vicente1507">VICTOR VICENTE</a></li>
+            <li><a href="https://github.com/RachMor">RAQUEL MOREIRA</a></li>
         </ul>
     </div>
 </footer>
