--- a/pesquisas.html
+++ b/pesquisas.html
@@ -89,13 +89,13 @@
         </div>
         <div>
             <ul>
-                <li>JUAN VICTOR</li>
-                <li>LEONARDO RODRIGUES</li>
-                <li>FELIPE BRAGA</li>
-                <li>JULIA AGATHA</li>
-                <li>CAIO DANIEL</li>
-                <li>VICTOR VICENTE</li>
-                <li>RAQUEL MOREIRA</li>
+            <li><a href="https://github.com/JuanVAF">JUAN VICTOR</a></li>
+            <li><a href="https://github.com/leoorodr">LEONARDO RODRIGUES</a></li>
+            <li><a href="https://github.com/obragaa">FELIPE BRAGA</a></li>
+            <li><a href="https://github.com/agatha-juh">JULIA AGATHA</a></li>
+            <li><a href="https://github.com/caiodanielp">CAIO DANIEL</a></li>
+            <li><a href="https://github.com/Vicente1507">VICTOR VICENTE</a></li>
+            <li><a href="https://github.com/RachMor">RAQUEL MOREIRA</a></li>
             </ul>
         </div>
     </footer>
