Finaliz. da estilização

--- a/pesquisas.html
+++ b/pesquisas.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>formulario</title>
+    <link rel="stylesheet" href="./css/pesquisas.css">
+    <title>Pesquisas</title>
 </head>
 <body>
         <header>
@@ -11,76 +12,7 @@
         <a href="pesquisas.html">Pesquisas</a>
         </header>
     <main>                
-    <form action="" method="get"> 
-    <h2>Pesquisa</h2>
-
-    <div>
-        <p>Essa é a questão 1, temos que selecionar a alternativa correta da questão.</p>
-        <label for="respostaA">RESPOSTA A</label>
-        <input type="checkbox" id="respostaA" name="respostaA">
-    </div>
-        <label for="respostaB">RESPOSTA B</label>
-        <input type="checkbox" id="respostaB" name="respostaB">
-    <div>
-        <label for="respostaC">RESPOSTA C</label>
-        <input type="checkbox" id="respostaC" name="respostaC">
-    </div>
-    <div>
-        <label for="respostaD">RESPOSTA D</label>
-        <input type="checkbox" id="respostaD" name="respostaD">
-    </div>
-
-    <div>
-        <p>Essa é a questão 1, temos que selecionar a alternativa correta da questão.</p>
-        <label for="respostaA">RESPOSTA A</label>
-        <input type="checkbox" id="respostaA" name="respostaA">
-    </div>
-        <label for="respostaB">RESPOSTA B</label>
-        <input type="checkbox" id="respostaB" name="respostaB">
-    <div>
-        <label for="respostaC">RESPOSTA C</label>
-        <input type="checkbox" id="respostaC" name="respostaC">
-    </div>
-    <div>
-        <label for="respostaD">RESPOSTA D</label>
-        <input type="checkbox" id="respostaD" name="respostaD">
-    </div>
-
-    <div>
-        <p>Essa é a questão 1, temos que selecionar a alternativa correta da questão.</p>
-        <label for="respostaA">RESPOSTA A</label>
-        <input type="checkbox" id="respostaA" name="respostaA">
-    </div>
-        <label for="respostaB">RESPOSTA B</label>
-        <input type="checkbox" id="respostaB" name="respostaB">
-    <div>
-        <label for="respostaC">RESPOSTA C</label>
-        <input type="checkbox" id="respostaC" name="respostaC">
-    </div>
-    <div>
-        <label for="respostaD">RESPOSTA D</label>
-        <input type="checkbox" id="respostaD" name="respostaD">
-    </div>
-
-    <div>
-        <p>Essa é a questão 1, temos que selecionar a alternativa correta da questão.</p>
-        <label for="respostaA">RESPOSTA A</label>
-        <input type="checkbox" id="respostaA" name="respostaA">
-    </div>
-        <label for="respostaB">RESPOSTA B</label>
-        <input type="checkbox" id="respostaB" name="respostaB">
-    <div>
-        <label for="respostaC">RESPOSTA C</label>
-        <input type="checkbox" id="respostaC" name="respostaC">
-    </div>
-    <div>
-        <label for="respostaD">RESPOSTA D</label>
-        <input type="checkbox" id="respostaD" name="respostaD">
-    </div>
-
-    </form>
     </main>
-
     <footer>
         <div>
             <h1>
