Estilizei a página de pesquisa, alterei os caminhos do script e a url da api

--- a/pesquisas.html
+++ b/pesquisas.html
@@ -3,84 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>formulario</title>
+    <link rel="stylesheet" href="./css/pesquisa.css">
+    <title>Página de pesquisa</title>
 </head>
 <body>
-        <header>
-            <h1>SISTEMAS DE PESQUISA</h1> 
+    <header>
+        <h1>SISTEMAS DE PESQUISA</h1> 
         <a href="pesquisas.html">Pesquisas</a>
-        </header>
+    </header>
     <main>                
-    <form action="" method="get"> 
-    <h2>Pesquisa</h2>
 
-    <div>
-        <p>Essa é a questão 1, temos que selecionar a alternativa correta da questão.</p>
-        <label for="respostaA">RESPOSTA A</label>
-        <input type="checkbox" id="respostaA" name="respostaA">
-    </div>
-        <label for="respostaB">RESPOSTA B</label>
-        <input type="checkbox" id="respostaB" name="respostaB">
-    <div>
-        <label for="respostaC">RESPOSTA C</label>
-        <input type="checkbox" id="respostaC" name="respostaC">
-    </div>
-    <div>
-        <label for="respostaD">RESPOSTA D</label>
-        <input type="checkbox" id="respostaD" name="respostaD">
-    </div>
-
-    <div>
-        <p>Essa é a questão 1, temos que selecionar a alternativa correta da questão.</p>
-        <label for="respostaA">RESPOSTA A</label>
-        <input type="checkbox" id="respostaA" name="respostaA">
-    </div>
-        <label for="respostaB">RESPOSTA B</label>
-        <input type="checkbox" id="respostaB" name="respostaB">
-    <div>
-        <label for="respostaC">RESPOSTA C</label>
-        <input type="checkbox" id="respostaC" name="respostaC">
-    </div>
-    <div>
-        <label for="respostaD">RESPOSTA D</label>
-        <input type="checkbox" id="respostaD" name="respostaD">
-    </div>
-
-    <div>
-        <p>Essa é a questão 1, temos que selecionar a alternativa correta da questão.</p>
-        <label for="respostaA">RESPOSTA A</label>
-        <input type="checkbox" id="respostaA" name="respostaA">
-    </div>
-        <label for="respostaB">RESPOSTA B</label>
-        <input type="checkbox" id="respostaB" name="respostaB">
-    <div>
-        <label for="respostaC">RESPOSTA C</label>
-        <input type="checkbox" id="respostaC" name="respostaC">
-    </div>
-    <div>
-        <label for="respostaD">RESPOSTA D</label>
-        <input type="checkbox" id="respostaD" name="respostaD">
-    </div>
-
-    <div>
-        <p>Essa é a questão 1, temos que selecionar a alternativa correta da questão.</p>
-        <label for="respostaA">RESPOSTA A</label>
-        <input type="checkbox" id="respostaA" name="respostaA">
-    </div>
-        <label for="respostaB">RESPOSTA B</label>
-        <input type="checkbox" id="respostaB" name="respostaB">
-    <div>
-        <label for="respostaC">RESPOSTA C</label>
-        <input type="checkbox" id="respostaC" name="respostaC">
-    </div>
-    <div>
-        <label for="respostaD">RESPOSTA D</label>
-        <input type="checkbox" id="respostaD" name="respostaD">
-    </div>
-
-    </form>
+        <iframe class="pesquisa" src="https://docs.google.com/forms/d/e/1FAIpQLScxRI78qS7xE7N4GKvSk4IDddrkSuLL81_v_bKXaiX3SdypHg/viewform?embedded=true" width="640" height="1878" frameborder="0" marginheight="0" marginwidth="0">A carregar…</iframe>
+    
     </main>
-
     <footer>
         <div>
             <h1>
@@ -99,5 +34,10 @@
             </ul>
         </div>
     </footer>
+
+
+    
+    <script src="/js/pesquisa.js"></script> 
+
 </body>
 </html>
