--- a/formulario.html
+++ b/formulario.html
@@ -76,7 +76,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script> 
+    <script src="/js/script.js"></script> 
 
 </body>
 </html>
