Arrumei a rota dos scripts

--- a/formulario.html
+++ b/formulario.html
@@ -16,18 +16,18 @@
             <div>
                 <h3>Questão</h3>
             </div>
-                <div>
-                    <input type="text" id="pergunta_input" name="pergunta_input" placeholder="Digite a pergunta"></input>
-                </div>               
-                <div>
-                <h3>Respostas</h3>
-                </div>
-                <div class="div">
-                    <input type="text" for="respostaA" placeholder="Resposta A" id="resposta_a" name="resposta_a"></input>
-                    <label for="respostaA">
-                        <input onclick="SetSel(this)" class="cb" type="checkbox" id="respostaA" name="respostaA">
-                    </label>
-                </div>
+            <div>
+                <input type="text" id="pergunta_input" name="pergunta_input" placeholder="Digite a pergunta"></input>
+            </div>               
+            <div>
+            <h3>Respostas</h3>
+            </div>
+            <div class="div">
+                <input type="text" for="respostaA" placeholder="Resposta A" id="resposta_a" name="resposta_a"></input>
+                <label for="respostaA">
+                    <input onclick="SetSel(this)" class="cb" type="checkbox" id="respostaA" name="respostaA">
+                </label>
+            </div>
             <div class="div">
                 <input type="text" for="respostaB" placeholder="Resposta B" id="resposta_b" name="resposta_b"></input>
                 <label for="respostaB">
@@ -50,7 +50,7 @@
             </div>
             <div class="botao">
                 <button name="button" onclick="criar()">CRIAR</button>
-                <button name="button" ">NOVA</button>
+                <button name="button">NOVA</button>
             </div>
             <p>*Marque a questão que você deseja que seja a correta</p>
         </form>
@@ -74,7 +74,7 @@
         </div>
     </footer>
 
-    <script src="/js/script.js"></script> 
+    <script src="./js/script.js"></script> 
 
 </body>
 </html>
