Arrumando o cadastro de perguntas

--- a/formulario.html
+++ b/formulario.html
@@ -48,12 +48,13 @@
                     <input onclick="SetSel(this)" class="cb" type="checkbox" id="respostaD" name="respostaD">
                 </label> 
             </div>
-            <div class="botao">
-                <button name="button" onclick="criar()">CRIAR</button>
-                <button name="button">NOVA</button>
-            </div>
-            <p>*Marque a questão que você deseja que seja a correta</p>
+            
         </form>
+        <div class="botao">
+            <button type="submit" name="button" onclick="criar()">CRIAR</button>
+            <button name="button">NOVA</button>
+        </div>
+        <p>*Marque a questão que você deseja que seja a correta</p>
     </main>
     <footer>
         <div>
